bgd-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: bgd
  name: bgd
  namespace: springboot-workshop-feb-2021
spec:
  host: "demo-springboot-workshop-feb-2021.apps.awsopenshift.ne-innovation.com"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
status:
  ingress:
  - conditions:
    - status: "True"
      type: Admitted
